# microsat-cpp

./: .directory  CMakeLists.txt  LICENSE  Makefile  README.md  driver.cpp  driver.hpp  example.cnf  main.cpp  memory.cpp  memory.hpp  memory_test.cpp  microsat  microsat++  simple.cnf  solver.cpp  solver.hpp  test.sh  tools.cpp  tools.hpp
benchmarks/groups/group/: bench1.sh  bench2.sh  bench3.sh
benchmarks/groups/group/bench1/: result_sat_pass_10-25.cnf  result_sat_pass_15-20.cnf  result_sat_pass_15-25.cnf  result_sat_pass_15-30.cnf  result_sat_pass_20-40.cnf  result_sat_pass_20-65.cnf  result_sat_pass_20-75.cnf  result_sat_pass_20-90.cnf  result_sat_pass_25-45.cnf  result_sat_pass_25-50.cnf  result_sat_pass_30-80.cnf  result_sat_pass_35-85.cnf  result_sat_pass_40-100.cnf  result_sat_pass_40-45.cnf  result_sat_pass_40-60.cnf  result_sat_pass_45-90.cnf  result_sat_pass_50-60.cnf  result_sat_pass_50-75.cnf  result_sat_pass_50-95.cnf  result_sat_pass_55-95.cnf  result_sat_pass_60-75.cnf  result_sat_pass_60-90.cnf  result_sat_pass_65-90.cnf  result_sat_pass_70-100.cnf  result_sat_pass_70-80.cnf  result_sat_pass_75-100.cnf  result_sat_pass_75-80.cnf  result_sat_wrong_10-25.cnf  result_sat_wrong_15-20.cnf  result_sat_wrong_15-25.cnf  result_sat_wrong_15-30.cnf  result_sat_wrong_20-40.cnf  result_sat_wrong_20-75.cnf  result_sat_wrong_20-90.cnf  result_sat_wrong_25-45.cnf  result_sat_wrong_25-50.cnf  result_sat_wrong_30-80.cnf  result_sat_wrong_40-100.cnf  result_sat_wrong_45-90.cnf  result_sat_wrong_55-95.cnf  (+24 more)
benchmarks/groups/group/bench2/: result_sat_pass_100-2000.cnf  (+35 more)
(+5 files in other folders)
